--- a/_posts/2020/2020-12-31-bonne-annee-2021.md
+++ b/_posts/2020/2020-12-31-bonne-annee-2021.md
@@ -1,12 +1,12 @@
 ---
 title: "Bonne année 2021"
 date: "2020-12-31"
+author: "Florent Appointaire"
+permalink: "/2020/12/31/bonne-annee-2021/"
+summary:
 categories: 
   - "autres"
 ---
-
-![Bonne année 2021 : textes, SMS, images et gifs pour vos voeux](https://img-4.linternaute.com/jhJXlNSI40GBNn4ExF4jKlGrS14=/1080x/smart/20914fd7c41e482cad717c5b3feba1e1/ccmcms-linternaute/19485000.jpg)
-
 Malgré le contexte difficile de cette année 2020, j'espère que vous avez pu vous épanouir personnellement mais aussi professionnellement.
 
 Pour ma part, malgré le fait de ne pas avoir pu assister à divers évènements physiques, comme le MVP Summit, MMSMOA, etc. j'ai pu faire diverses sessions, en ligne, pour des évenements comme le [Virtual Azure Community Day](https://cloudyjourney.fr/2020/03/27/virtual-azure-community-day/), [Azure Global Virtual](https://cloudyjourney.fr/2020/03/30/conference-azure-global-virtual/), [DevDay](https://cloudyjourney.fr/2020/11/15/conferences-devday-2020/), [IT Pro Dev Connections](https://cloudyjourney.fr/2020/11/30/conferences-it-pro-dev-connections-2020-grece/) et le [Festive Tech Calendar](https://cloudyjourney.fr/2020/12/28/conference-festive-tech-calendar-2020/).
@@ -18,3 +18,5 @@ J'ai également reçu, pour la 5ème fois, le titre de Microsoft MVP.
 Je vous souhaite le meilleur pour cette année 2021, en espérant avoir l'occasion de discuter avec vous, virtuellement, mais aussi, je l'espère, physiquement.
 
 Florent
+
+![Bonne année 2021 : textes, SMS, images et gifs pour vos voeux](https://img-4.linternaute.com/jhJXlNSI40GBNn4ExF4jKlGrS14=/1080x/smart/20914fd7c41e482cad717c5b3feba1e1/ccmcms-linternaute/19485000.jpg)
